// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Slider> renders 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <RCTScrollView
    contentContainerStyle={undefined}
    horizontal={true}
    onScroll={undefined}
    scrollEventThrottle={16}
  >
    <View />
  </RCTScrollView>
</View>
`;

exports[`<Slider> when {caption} 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "marginBottom": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={undefined}
      style={
        Array [
          Object {
            "color": "#4a4a4a",
            "fontFamily": undefined,
          },
          false,
          false,
          false,
          false,
          Object {
            "fontSize": 16,
            "lineHeight": 20.8,
          },
          false,
          Object {
            "fontSize": 14,
            "lineHeight": 16.8,
          },
          false,
          false,
          false,
          false,
          false,
          false,
          Object {
            "color": "#9b9b9b",
          },
        ]
      }
    >
      Hello World
    </Text>
  </View>
  <RCTScrollView
    contentContainerStyle={undefined}
    horizontal={true}
    onScroll={undefined}
    scrollEventThrottle={16}
  >
    <View />
  </RCTScrollView>
</View>
`;

exports[`<Slider> when {dataSource} 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <RCTScrollView
    contentContainerStyle={undefined}
    horizontal={true}
    onScroll={undefined}
    scrollEventThrottle={16}
  >
    <View>
      <View
        style={
          Object {
            "marginRight": 10,
          }
        }
      >
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "backgroundColor": "#CDD2D4",
                "borderRadius": 3,
              },
              Object {
                "width": 168,
              },
              undefined,
              undefined,
            ]
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <View
            style={null}
          >
            <View
              style={
                Array [
                  Object {
                    "alignContent": "center",
                    "alignItems": "center",
                    "backgroundColor": "#f4f4f4",
                    "justifyContent": "center",
                  },
                  Array [
                    Object {
                      "borderRadius": 3,
                      "opacity": 0.8,
                    },
                    Object {
                      "width": 168,
                    },
                    Object {
                      "height": 190,
                    },
                    false,
                    undefined,
                  ],
                ]
              }
            >
              <Image
                onLoad={[Function]}
                resizeMode="cover"
                source={
                  Object {
                    "uri": "https://picsum.photos/320/200?image=11",
                  }
                }
                style={
                  Array [
                    Object {
                      "borderRadius": 3,
                      "opacity": 0.8,
                    },
                    Object {
                      "width": 168,
                    },
                    Object {
                      "height": 190,
                    },
                    false,
                    undefined,
                  ]
                }
              />
              <ActivityIndicator
                animating={true}
                color="white"
                hidesWhenStopped={true}
                size="large"
                style={
                  Object {
                    "position": "absolute",
                  }
                }
              />
            </View>
            <View
              pointerEvents="none"
              style={
                Object {
                  "alignContent": "center",
                  "alignItems": "center",
                  "alignSelf": "center",
                  "height": "100%",
                  "justifyContent": "center",
                  "left": 0,
                  "padding": 10,
                  "position": "absolute",
                  "width": "100%",
                }
              }
            >
              <View>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  numberOfLines={undefined}
                  style={
                    Array [
                      Object {
                        "color": "#4a4a4a",
                        "fontFamily": undefined,
                      },
                      false,
                      false,
                      Object {
                        "fontWeight": "bold",
                      },
                      false,
                      Object {
                        "fontSize": 16,
                        "lineHeight": 20.8,
                      },
                      false,
                      false,
                      Object {
                        "fontSize": 20,
                        "lineHeight": 26,
                      },
                      false,
                      false,
                      false,
                      false,
                      false,
                      Object {
                        "color": "#ffffff",
                        "fontSize": 20,
                        "lineHeight": 26,
                        "marginBottom": 5,
                        "textAlign": "center",
                      },
                    ]
                  }
                >
                  Title 0
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "marginRight": 10,
          }
        }
      >
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "backgroundColor": "#CDD2D4",
                "borderRadius": 3,
              },
              Object {
                "width": 168,
              },
              undefined,
              undefined,
            ]
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <View
            style={null}
          >
            <View
              style={
                Array [
                  Object {
                    "alignContent": "center",
                    "alignItems": "center",
                    "backgroundColor": "#f4f4f4",
                    "justifyContent": "center",
                  },
                  Array [
                    Object {
                      "borderRadius": 3,
                      "opacity": 0.8,
                    },
                    Object {
                      "width": 168,
                    },
                    Object {
                      "height": 190,
                    },
                    false,
                    undefined,
                  ],
                ]
              }
            >
              <Image
                onLoad={[Function]}
                resizeMode="cover"
                source={
                  Object {
                    "uri": "https://picsum.photos/320/200?image=12",
                  }
                }
                style={
                  Array [
                    Object {
                      "borderRadius": 3,
                      "opacity": 0.8,
                    },
                    Object {
                      "width": 168,
                    },
                    Object {
                      "height": 190,
                    },
                    false,
                    undefined,
                  ]
                }
              />
              <ActivityIndicator
                animating={true}
                color="white"
                hidesWhenStopped={true}
                size="large"
                style={
                  Object {
                    "position": "absolute",
                  }
                }
              />
            </View>
            <View
              pointerEvents="none"
              style={
                Object {
                  "alignContent": "center",
                  "alignItems": "center",
                  "alignSelf": "center",
                  "height": "100%",
                  "justifyContent": "center",
                  "left": 0,
                  "padding": 10,
                  "position": "absolute",
                  "width": "100%",
                }
              }
            >
              <View>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  numberOfLines={undefined}
                  style={
                    Array [
                      Object {
                        "color": "#4a4a4a",
                        "fontFamily": undefined,
                      },
                      false,
                      false,
                      Object {
                        "fontWeight": "bold",
                      },
                      false,
                      Object {
                        "fontSize": 16,
                        "lineHeight": 20.8,
                      },
                      false,
                      false,
                      Object {
                        "fontSize": 20,
                        "lineHeight": 26,
                      },
                      false,
                      false,
                      false,
                      false,
                      false,
                      Object {
                        "color": "#ffffff",
                        "fontSize": 20,
                        "lineHeight": 26,
                        "marginBottom": 5,
                        "textAlign": "center",
                      },
                    ]
                  }
                >
                  Title 1
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`<Slider> when {itemMargin} 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <RCTScrollView
    contentContainerStyle={undefined}
    horizontal={true}
    onScroll={undefined}
    scrollEventThrottle={16}
  >
    <View>
      <View
        style={
          Object {
            "marginRight": 16,
          }
        }
      >
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "backgroundColor": "#CDD2D4",
                "borderRadius": 3,
              },
              Object {
                "width": 168,
              },
              undefined,
              undefined,
            ]
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <View
            style={null}
          >
            <View
              style={
                Array [
                  Object {
                    "alignContent": "center",
                    "alignItems": "center",
                    "backgroundColor": "#f4f4f4",
                    "justifyContent": "center",
                  },
                  Array [
                    Object {
                      "borderRadius": 3,
                      "opacity": 0.8,
                    },
                    Object {
                      "width": 168,
                    },
                    Object {
                      "height": 190,
                    },
                    false,
                    undefined,
                  ],
                ]
              }
            >
              <Image
                onLoad={[Function]}
                resizeMode="cover"
                source={
                  Object {
                    "uri": "https://picsum.photos/320/200?image=11",
                  }
                }
                style={
                  Array [
                    Object {
                      "borderRadius": 3,
                      "opacity": 0.8,
                    },
                    Object {
                      "width": 168,
                    },
                    Object {
                      "height": 190,
                    },
                    false,
                    undefined,
                  ]
                }
              />
              <ActivityIndicator
                animating={true}
                color="white"
                hidesWhenStopped={true}
                size="large"
                style={
                  Object {
                    "position": "absolute",
                  }
                }
              />
            </View>
            <View
              pointerEvents="none"
              style={
                Object {
                  "alignContent": "center",
                  "alignItems": "center",
                  "alignSelf": "center",
                  "height": "100%",
                  "justifyContent": "center",
                  "left": 0,
                  "padding": 10,
                  "position": "absolute",
                  "width": "100%",
                }
              }
            >
              <View>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  numberOfLines={undefined}
                  style={
                    Array [
                      Object {
                        "color": "#4a4a4a",
                        "fontFamily": undefined,
                      },
                      false,
                      false,
                      Object {
                        "fontWeight": "bold",
                      },
                      false,
                      Object {
                        "fontSize": 16,
                        "lineHeight": 20.8,
                      },
                      false,
                      false,
                      Object {
                        "fontSize": 20,
                        "lineHeight": 26,
                      },
                      false,
                      false,
                      false,
                      false,
                      false,
                      Object {
                        "color": "#ffffff",
                        "fontSize": 20,
                        "lineHeight": 26,
                        "marginBottom": 5,
                        "textAlign": "center",
                      },
                    ]
                  }
                >
                  Title 0
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "marginRight": 16,
          }
        }
      >
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "backgroundColor": "#CDD2D4",
                "borderRadius": 3,
              },
              Object {
                "width": 168,
              },
              undefined,
              undefined,
            ]
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <View
            style={null}
          >
            <View
              style={
                Array [
                  Object {
                    "alignContent": "center",
                    "alignItems": "center",
                    "backgroundColor": "#f4f4f4",
                    "justifyContent": "center",
                  },
                  Array [
                    Object {
                      "borderRadius": 3,
                      "opacity": 0.8,
                    },
                    Object {
                      "width": 168,
                    },
                    Object {
                      "height": 190,
                    },
                    false,
                    undefined,
                  ],
                ]
              }
            >
              <Image
                onLoad={[Function]}
                resizeMode="cover"
                source={
                  Object {
                    "uri": "https://picsum.photos/320/200?image=12",
                  }
                }
                style={
                  Array [
                    Object {
                      "borderRadius": 3,
                      "opacity": 0.8,
                    },
                    Object {
                      "width": 168,
                    },
                    Object {
                      "height": 190,
                    },
                    false,
                    undefined,
                  ]
                }
              />
              <ActivityIndicator
                animating={true}
                color="white"
                hidesWhenStopped={true}
                size="large"
                style={
                  Object {
                    "position": "absolute",
                  }
                }
              />
            </View>
            <View
              pointerEvents="none"
              style={
                Object {
                  "alignContent": "center",
                  "alignItems": "center",
                  "alignSelf": "center",
                  "height": "100%",
                  "justifyContent": "center",
                  "left": 0,
                  "padding": 10,
                  "position": "absolute",
                  "width": "100%",
                }
              }
            >
              <View>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  numberOfLines={undefined}
                  style={
                    Array [
                      Object {
                        "color": "#4a4a4a",
                        "fontFamily": undefined,
                      },
                      false,
                      false,
                      Object {
                        "fontWeight": "bold",
                      },
                      false,
                      Object {
                        "fontSize": 16,
                        "lineHeight": 20.8,
                      },
                      false,
                      false,
                      Object {
                        "fontSize": 20,
                        "lineHeight": 26,
                      },
                      false,
                      false,
                      false,
                      false,
                      false,
                      Object {
                        "color": "#ffffff",
                        "fontSize": 20,
                        "lineHeight": 26,
                        "marginBottom": 5,
                        "textAlign": "center",
                      },
                    ]
                  }
                >
                  Title 1
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`<Slider> when {momentum} 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <RCTScrollView
    contentContainerStyle={undefined}
    horizontal={true}
    onScroll={[Function]}
    scrollEventThrottle={16}
  >
    <View>
      <View
        style={
          Object {
            "marginRight": 10,
          }
        }
      >
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "backgroundColor": "#CDD2D4",
                "borderRadius": 3,
              },
              Object {
                "width": 168,
              },
              undefined,
              undefined,
            ]
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <View
            style={null}
          >
            <View
              style={
                Array [
                  Object {
                    "alignContent": "center",
                    "alignItems": "center",
                    "backgroundColor": "#f4f4f4",
                    "justifyContent": "center",
                  },
                  Array [
                    Object {
                      "borderRadius": 3,
                      "opacity": 0.8,
                    },
                    Object {
                      "width": 168,
                    },
                    Object {
                      "height": 190,
                    },
                    false,
                    undefined,
                  ],
                ]
              }
            >
              <Image
                onLoad={[Function]}
                resizeMode="cover"
                source={
                  Object {
                    "uri": "https://picsum.photos/320/200?image=11",
                  }
                }
                style={
                  Array [
                    Object {
                      "borderRadius": 3,
                      "opacity": 0.8,
                    },
                    Object {
                      "width": 168,
                    },
                    Object {
                      "height": 190,
                    },
                    false,
                    undefined,
                  ]
                }
              />
              <ActivityIndicator
                animating={true}
                color="white"
                hidesWhenStopped={true}
                size="large"
                style={
                  Object {
                    "position": "absolute",
                  }
                }
              />
            </View>
            <View
              pointerEvents="none"
              style={
                Object {
                  "alignContent": "center",
                  "alignItems": "center",
                  "alignSelf": "center",
                  "height": "100%",
                  "justifyContent": "center",
                  "left": 0,
                  "padding": 10,
                  "position": "absolute",
                  "width": "100%",
                }
              }
            >
              <View>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  numberOfLines={undefined}
                  style={
                    Array [
                      Object {
                        "color": "#4a4a4a",
                        "fontFamily": undefined,
                      },
                      false,
                      false,
                      Object {
                        "fontWeight": "bold",
                      },
                      false,
                      Object {
                        "fontSize": 16,
                        "lineHeight": 20.8,
                      },
                      false,
                      false,
                      Object {
                        "fontSize": 20,
                        "lineHeight": 26,
                      },
                      false,
                      false,
                      false,
                      false,
                      false,
                      Object {
                        "color": "#ffffff",
                        "fontSize": 20,
                        "lineHeight": 26,
                        "marginBottom": 5,
                        "textAlign": "center",
                      },
                    ]
                  }
                >
                  Title 0
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "marginRight": 10,
          }
        }
      >
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "backgroundColor": "#CDD2D4",
                "borderRadius": 3,
              },
              Object {
                "width": 168,
              },
              undefined,
              undefined,
            ]
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <View
            style={null}
          >
            <View
              style={
                Array [
                  Object {
                    "alignContent": "center",
                    "alignItems": "center",
                    "backgroundColor": "#f4f4f4",
                    "justifyContent": "center",
                  },
                  Array [
                    Object {
                      "borderRadius": 3,
                      "opacity": 0.8,
                    },
                    Object {
                      "width": 168,
                    },
                    Object {
                      "height": 190,
                    },
                    false,
                    undefined,
                  ],
                ]
              }
            >
              <Image
                onLoad={[Function]}
                resizeMode="cover"
                source={
                  Object {
                    "uri": "https://picsum.photos/320/200?image=12",
                  }
                }
                style={
                  Array [
                    Object {
                      "borderRadius": 3,
                      "opacity": 0.8,
                    },
                    Object {
                      "width": 168,
                    },
                    Object {
                      "height": 190,
                    },
                    false,
                    undefined,
                  ]
                }
              />
              <ActivityIndicator
                animating={true}
                color="white"
                hidesWhenStopped={true}
                size="large"
                style={
                  Object {
                    "position": "absolute",
                  }
                }
              />
            </View>
            <View
              pointerEvents="none"
              style={
                Object {
                  "alignContent": "center",
                  "alignItems": "center",
                  "alignSelf": "center",
                  "height": "100%",
                  "justifyContent": "center",
                  "left": 0,
                  "padding": 10,
                  "position": "absolute",
                  "width": "100%",
                }
              }
            >
              <View>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  numberOfLines={undefined}
                  style={
                    Array [
                      Object {
                        "color": "#4a4a4a",
                        "fontFamily": undefined,
                      },
                      false,
                      false,
                      Object {
                        "fontWeight": "bold",
                      },
                      false,
                      Object {
                        "fontSize": 16,
                        "lineHeight": 20.8,
                      },
                      false,
                      false,
                      Object {
                        "fontSize": 20,
                        "lineHeight": 26,
                      },
                      false,
                      false,
                      false,
                      false,
                      false,
                      Object {
                        "color": "#ffffff",
                        "fontSize": 20,
                        "lineHeight": 26,
                        "marginBottom": 5,
                        "textAlign": "center",
                      },
                    ]
                  }
                >
                  Title 1
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`<Slider> when {navigation} 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "height": "100%",
          "justifyContent": "center",
          "position": "absolute",
          "zIndex": 1,
        },
        Object {
          "left": -16,
        },
      ]
    }
  >
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      hasTVPreferredFocus={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "borderRadius": 3,
            "margin": 5,
          },
          false,
          false,
          undefined,
        ]
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <View
        style={
          Array [
            Object {
              "alignContent": "center",
              "alignItems": "center",
              "backgroundColor": "#4a4a4a",
              "borderRadius": 3,
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "center",
            },
            Object {
              "height": 45,
              "paddingHorizontal": 30,
            },
            false,
            false,
            false,
            Object {
              "height": 30,
              "paddingHorizontal": 15,
            },
            false,
            false,
            false,
            false,
            undefined,
          ]
        }
      >
        <Image
          resizeMode="contain"
          source={
            Object {
              "testUri": "../../../components/Icon/assets/left.png",
            }
          }
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "height": 20,
                "width": 20,
              },
              Object {
                "height": 20,
                "width": 20,
              },
              undefined,
            ]
          }
        />
      </View>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "height": "100%",
          "justifyContent": "center",
          "position": "absolute",
          "zIndex": 1,
        },
        Object {
          "right": -16,
        },
      ]
    }
  >
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      hasTVPreferredFocus={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "borderRadius": 3,
            "margin": 5,
          },
          false,
          false,
          undefined,
        ]
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <View
        style={
          Array [
            Object {
              "alignContent": "center",
              "alignItems": "center",
              "backgroundColor": "#4a4a4a",
              "borderRadius": 3,
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "center",
            },
            Object {
              "height": 45,
              "paddingHorizontal": 30,
            },
            false,
            false,
            false,
            Object {
              "height": 30,
              "paddingHorizontal": 15,
            },
            false,
            false,
            false,
            false,
            undefined,
          ]
        }
      >
        <Image
          resizeMode="contain"
          source={
            Object {
              "testUri": "../../../components/Icon/assets/right.png",
            }
          }
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "height": 20,
                "width": 20,
              },
              Object {
                "height": 20,
                "width": 20,
              },
              undefined,
            ]
          }
        />
      </View>
    </View>
  </View>
  <RCTScrollView
    contentContainerStyle={undefined}
    horizontal={true}
    onScroll={undefined}
    scrollEventThrottle={16}
  >
    <View />
  </RCTScrollView>
</View>
`;

exports[`<Slider> when {steps} 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <RCTScrollView
    contentContainerStyle={undefined}
    horizontal={true}
    onScroll={undefined}
    scrollEventThrottle={16}
  >
    <View>
      <View
        style={
          Object {
            "marginRight": 10,
          }
        }
      >
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "backgroundColor": "#CDD2D4",
                "borderRadius": 3,
              },
              Object {
                "width": 168,
              },
              undefined,
              undefined,
            ]
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <View
            style={null}
          >
            <View
              style={
                Array [
                  Object {
                    "alignContent": "center",
                    "alignItems": "center",
                    "backgroundColor": "#f4f4f4",
                    "justifyContent": "center",
                  },
                  Array [
                    Object {
                      "borderRadius": 3,
                      "opacity": 0.8,
                    },
                    Object {
                      "width": 168,
                    },
                    Object {
                      "height": 190,
                    },
                    false,
                    undefined,
                  ],
                ]
              }
            >
              <Image
                onLoad={[Function]}
                resizeMode="cover"
                source={
                  Object {
                    "uri": "https://picsum.photos/320/200?image=11",
                  }
                }
                style={
                  Array [
                    Object {
                      "borderRadius": 3,
                      "opacity": 0.8,
                    },
                    Object {
                      "width": 168,
                    },
                    Object {
                      "height": 190,
                    },
                    false,
                    undefined,
                  ]
                }
              />
              <ActivityIndicator
                animating={true}
                color="white"
                hidesWhenStopped={true}
                size="large"
                style={
                  Object {
                    "position": "absolute",
                  }
                }
              />
            </View>
            <View
              pointerEvents="none"
              style={
                Object {
                  "alignContent": "center",
                  "alignItems": "center",
                  "alignSelf": "center",
                  "height": "100%",
                  "justifyContent": "center",
                  "left": 0,
                  "padding": 10,
                  "position": "absolute",
                  "width": "100%",
                }
              }
            >
              <View>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  numberOfLines={undefined}
                  style={
                    Array [
                      Object {
                        "color": "#4a4a4a",
                        "fontFamily": undefined,
                      },
                      false,
                      false,
                      Object {
                        "fontWeight": "bold",
                      },
                      false,
                      Object {
                        "fontSize": 16,
                        "lineHeight": 20.8,
                      },
                      false,
                      false,
                      Object {
                        "fontSize": 20,
                        "lineHeight": 26,
                      },
                      false,
                      false,
                      false,
                      false,
                      false,
                      Object {
                        "color": "#ffffff",
                        "fontSize": 20,
                        "lineHeight": 26,
                        "marginBottom": 5,
                        "textAlign": "center",
                      },
                    ]
                  }
                >
                  Title 0
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "marginRight": 10,
          }
        }
      >
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "backgroundColor": "#CDD2D4",
                "borderRadius": 3,
              },
              Object {
                "width": 168,
              },
              undefined,
              undefined,
            ]
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <View
            style={null}
          >
            <View
              style={
                Array [
                  Object {
                    "alignContent": "center",
                    "alignItems": "center",
                    "backgroundColor": "#f4f4f4",
                    "justifyContent": "center",
                  },
                  Array [
                    Object {
                      "borderRadius": 3,
                      "opacity": 0.8,
                    },
                    Object {
                      "width": 168,
                    },
                    Object {
                      "height": 190,
                    },
                    false,
                    undefined,
                  ],
                ]
              }
            >
              <Image
                onLoad={[Function]}
                resizeMode="cover"
                source={
                  Object {
                    "uri": "https://picsum.photos/320/200?image=12",
                  }
                }
                style={
                  Array [
                    Object {
                      "borderRadius": 3,
                      "opacity": 0.8,
                    },
                    Object {
                      "width": 168,
                    },
                    Object {
                      "height": 190,
                    },
                    false,
                    undefined,
                  ]
                }
              />
              <ActivityIndicator
                animating={true}
                color="white"
                hidesWhenStopped={true}
                size="large"
                style={
                  Object {
                    "position": "absolute",
                  }
                }
              />
            </View>
            <View
              pointerEvents="none"
              style={
                Object {
                  "alignContent": "center",
                  "alignItems": "center",
                  "alignSelf": "center",
                  "height": "100%",
                  "justifyContent": "center",
                  "left": 0,
                  "padding": 10,
                  "position": "absolute",
                  "width": "100%",
                }
              }
            >
              <View>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  numberOfLines={undefined}
                  style={
                    Array [
                      Object {
                        "color": "#4a4a4a",
                        "fontFamily": undefined,
                      },
                      false,
                      false,
                      Object {
                        "fontWeight": "bold",
                      },
                      false,
                      Object {
                        "fontSize": 16,
                        "lineHeight": 20.8,
                      },
                      false,
                      false,
                      Object {
                        "fontSize": 20,
                        "lineHeight": 26,
                      },
                      false,
                      false,
                      false,
                      false,
                      false,
                      Object {
                        "color": "#ffffff",
                        "fontSize": 20,
                        "lineHeight": 26,
                        "marginBottom": 5,
                        "textAlign": "center",
                      },
                    ]
                  }
                >
                  Title 1
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`<Slider> when {style} 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "backgroundColor": "orange",
        "padding": 20,
      }
    }
    horizontal={true}
    onScroll={undefined}
    scrollEventThrottle={16}
  >
    <View>
      <View
        style={
          Object {
            "marginRight": 10,
          }
        }
      >
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "backgroundColor": "#CDD2D4",
                "borderRadius": 3,
              },
              Object {
                "width": 168,
              },
              undefined,
              undefined,
            ]
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <View
            style={null}
          >
            <View
              style={
                Array [
                  Object {
                    "alignContent": "center",
                    "alignItems": "center",
                    "backgroundColor": "#f4f4f4",
                    "justifyContent": "center",
                  },
                  Array [
                    Object {
                      "borderRadius": 3,
                      "opacity": 0.8,
                    },
                    Object {
                      "width": 168,
                    },
                    Object {
                      "height": 190,
                    },
                    false,
                    undefined,
                  ],
                ]
              }
            >
              <Image
                onLoad={[Function]}
                resizeMode="cover"
                source={
                  Object {
                    "uri": "https://picsum.photos/320/200?image=11",
                  }
                }
                style={
                  Array [
                    Object {
                      "borderRadius": 3,
                      "opacity": 0.8,
                    },
                    Object {
                      "width": 168,
                    },
                    Object {
                      "height": 190,
                    },
                    false,
                    undefined,
                  ]
                }
              />
              <ActivityIndicator
                animating={true}
                color="white"
                hidesWhenStopped={true}
                size="large"
                style={
                  Object {
                    "position": "absolute",
                  }
                }
              />
            </View>
            <View
              pointerEvents="none"
              style={
                Object {
                  "alignContent": "center",
                  "alignItems": "center",
                  "alignSelf": "center",
                  "height": "100%",
                  "justifyContent": "center",
                  "left": 0,
                  "padding": 10,
                  "position": "absolute",
                  "width": "100%",
                }
              }
            >
              <View>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  numberOfLines={undefined}
                  style={
                    Array [
                      Object {
                        "color": "#4a4a4a",
                        "fontFamily": undefined,
                      },
                      false,
                      false,
                      Object {
                        "fontWeight": "bold",
                      },
                      false,
                      Object {
                        "fontSize": 16,
                        "lineHeight": 20.8,
                      },
                      false,
                      false,
                      Object {
                        "fontSize": 20,
                        "lineHeight": 26,
                      },
                      false,
                      false,
                      false,
                      false,
                      false,
                      Object {
                        "color": "#ffffff",
                        "fontSize": 20,
                        "lineHeight": 26,
                        "marginBottom": 5,
                        "textAlign": "center",
                      },
                    ]
                  }
                >
                  Title 0
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "marginRight": 10,
          }
        }
      >
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "backgroundColor": "#CDD2D4",
                "borderRadius": 3,
              },
              Object {
                "width": 168,
              },
              undefined,
              undefined,
            ]
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <View
            style={null}
          >
            <View
              style={
                Array [
                  Object {
                    "alignContent": "center",
                    "alignItems": "center",
                    "backgroundColor": "#f4f4f4",
                    "justifyContent": "center",
                  },
                  Array [
                    Object {
                      "borderRadius": 3,
                      "opacity": 0.8,
                    },
                    Object {
                      "width": 168,
                    },
                    Object {
                      "height": 190,
                    },
                    false,
                    undefined,
                  ],
                ]
              }
            >
              <Image
                onLoad={[Function]}
                resizeMode="cover"
                source={
                  Object {
                    "uri": "https://picsum.photos/320/200?image=12",
                  }
                }
                style={
                  Array [
                    Object {
                      "borderRadius": 3,
                      "opacity": 0.8,
                    },
                    Object {
                      "width": 168,
                    },
                    Object {
                      "height": 190,
                    },
                    false,
                    undefined,
                  ]
                }
              />
              <ActivityIndicator
                animating={true}
                color="white"
                hidesWhenStopped={true}
                size="large"
                style={
                  Object {
                    "position": "absolute",
                  }
                }
              />
            </View>
            <View
              pointerEvents="none"
              style={
                Object {
                  "alignContent": "center",
                  "alignItems": "center",
                  "alignSelf": "center",
                  "height": "100%",
                  "justifyContent": "center",
                  "left": 0,
                  "padding": 10,
                  "position": "absolute",
                  "width": "100%",
                }
              }
            >
              <View>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  numberOfLines={undefined}
                  style={
                    Array [
                      Object {
                        "color": "#4a4a4a",
                        "fontFamily": undefined,
                      },
                      false,
                      false,
                      Object {
                        "fontWeight": "bold",
                      },
                      false,
                      Object {
                        "fontSize": 16,
                        "lineHeight": 20.8,
                      },
                      false,
                      false,
                      Object {
                        "fontSize": 20,
                        "lineHeight": 26,
                      },
                      false,
                      false,
                      false,
                      false,
                      false,
                      Object {
                        "color": "#ffffff",
                        "fontSize": 20,
                        "lineHeight": 26,
                        "marginBottom": 5,
                        "textAlign": "center",
                      },
                    ]
                  }
                >
                  Title 1
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`<Slider> when {title} 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "marginBottom": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={undefined}
      style={
        Array [
          Object {
            "color": "#4a4a4a",
            "fontFamily": undefined,
          },
          false,
          false,
          Object {
            "fontWeight": "bold",
          },
          false,
          Object {
            "fontSize": 16,
            "lineHeight": 20.8,
          },
          false,
          false,
          Object {
            "fontSize": 20,
            "lineHeight": 26,
          },
          false,
          false,
          false,
          false,
          false,
          Object {},
        ]
      }
    >
      Hello World
    </Text>
  </View>
  <RCTScrollView
    contentContainerStyle={undefined}
    horizontal={true}
    onScroll={undefined}
    scrollEventThrottle={16}
  >
    <View />
  </RCTScrollView>
</View>
`;
